--- a/docs/common-options/time-unit/time-units.asciidoc
+++ b/docs/common-options/time-unit/time-units.asciidoc
@@ -53,7 +53,7 @@ Expect("2d")
     .WhenSerializing(unitMilliseconds);
 ----
 
-The `Milliseconds` property on `Time` is calculated even when not using the constructor that takes a double
+The `Milliseconds` property on `Time` is calculated even when not using the constructor that takes a `double`
 
 [source,csharp]
 ----
@@ -65,68 +65,44 @@ unitString.Milliseconds.Should().Be(1000*60*60*24*2);
 
 ==== Implicit conversion
 
-Alternatively to using the constructor, `string`, `TimeSpan` and `double` can be implicitly converted to `Time`
+There are implicit conversions from `string`, `TimeSpan` and `double` to an instance of `Time`, making them
+easier to work with
 
 [source,csharp]
 ----
-Time oneAndHalfYear = "1.5y";
-Time twoWeeks = TimeSpan.FromDays(14);
+Time oneMinute = "1m";
+Time fourteenDays = TimeSpan.FromDays(14);
 Time twoDays = 1000*60*60*24*2;
 
-Expect("1.5y").WhenSerializing(oneAndHalfYear);
-Expect("2w").WhenSerializing(twoWeeks);
+Expect("1m").WhenSerializing(oneMinute);
+Expect("14d").WhenSerializing(fourteenDays);
 Expect("2d").WhenSerializing(twoDays);
+----
 
-Time oneAndHalfYear = "1.5y";
-Time twoWeeks = TimeSpan.FromDays(14);
+==== Equality and Comparison
+
+Comparisons on the expressions can be performed since Milliseconds are calculated
+even when values are not passed as `double` milliseconds
+
+[source,csharp]
+----
+Time fourteenDays = TimeSpan.FromDays(14);
+fourteenDays.Milliseconds.Should().Be(1209600000);
+
 Time twoDays = 1000*60*60*24*2;
-----
 
-Milliseconds are calculated even when values are not passed as long...
-
-[source,csharp]
-----
-twoWeeks.Milliseconds.Should().BeGreaterThan(1);
-----
-
-...**except** when dealing with years or months, whose millsecond value cannot
-be calculated *accurately*, since they are not fixed durations. For instance,
-30 vs 31 vs 28 days in a month, or 366 vs 365 days in a year.
-In this instance, Milliseconds will be -1.
-
-[source,csharp]
-----
-oneAndHalfYear.Milliseconds.Should().Be(-1);
-----
-
-This allows you to do comparisons on the expressions
-
-[source,csharp]
-----
-oneAndHalfYear.Should().BeGreaterThan(twoWeeks);
-(oneAndHalfYear > twoWeeks).Should().BeTrue();
-(oneAndHalfYear >= twoWeeks).Should().BeTrue();
+fourteenDays.Should().BeGreaterThan(twoDays);
+(fourteenDays > twoDays).Should().BeTrue();
 (twoDays != null).Should().BeTrue();
 (twoDays >= new Time("2d")).Should().BeTrue();
 
-twoDays.Should().BeLessThan(twoWeeks);
-(twoDays < twoWeeks).Should().BeTrue();
-(twoDays <= twoWeeks).Should().BeTrue();
+twoDays.Should().BeLessThan(fourteenDays);
+(twoDays < fourteenDays).Should().BeTrue();
+(twoDays <= fourteenDays).Should().BeTrue();
 (twoDays <= new Time("2d")).Should().BeTrue();
 ----
 
-Special Time values `0` and `-1` can be compared against each other
-and other Time values although admittingly this is a tad non-sensical.
-
-[source,csharp]
-----
-Time.MinusOne.Should().BeLessThan(Time.Zero);
-Time.Zero.Should().BeGreaterThan(Time.MinusOne);
-Time.Zero.Should().BeLessThan(twoDays);
-Time.MinusOne.Should().BeLessThan(twoDays);
-----
-
-And assert equality
+Equality can also be performed
 
 [source,csharp]
 ----
@@ -134,15 +110,78 @@ twoDays.Should().Be(new Time("2d"));
 (twoDays == new Time("2d")).Should().BeTrue();
 (twoDays != new Time("2.1d")).Should().BeTrue();
 (new Time("2.1d") == new Time(TimeSpan.FromDays(2.1))).Should().BeTrue();
-//the string "-1" is not the same as double -1 which is milliseconds
-(new Time("-1") == new Time(-1)).Should().BeFalse();
-(new Time("-1") == Time.MinusOne).Should().BeTrue();
+----
+
+Equality has down to 1/10 nanosecond precision
+
+[source,csharp]
+----
+Time oneNanosecond = new Time(1, Nest.TimeUnit.Nanoseconds);
+Time onePointNoughtNineNanoseconds = "1.09nanos";
+Time onePointOneNanoseconds = "1.1nanos";
+
+(oneNanosecond == onePointNoughtNineNanoseconds).Should().BeTrue();
+(oneNanosecond == onePointOneNanoseconds).Should().BeFalse();
+----
+
+==== Special Time values
+
+Elasticsearch has two special values that can sometimes be passed where a `Time` is accepted
+
+* `0` represented as `Time.Zero`
+
+* `-1` represented as `Time.MinusOne`
+
+The following are all equal to `Time.MinusOne`
+
+[source,csharp]
+----
+Time.MinusOne.Should().Be(Time.MinusOne);
+new Time("-1").Should().Be(Time.MinusOne);
+new Time(-1).Should().Be(Time.MinusOne);
+((Time) (-1)).Should().Be(Time.MinusOne);
+((Time) "-1").Should().Be(Time.MinusOne);
+((Time) (-1)).Should().Be((Time) "-1");
+----
+
+Similarly, the following are all equal to `Time.Zero`
+
+[source,csharp]
+----
+Time.Zero.Should().Be(Time.Zero);
+new Time("0").Should().Be(Time.Zero);
+new Time(0).Should().Be(Time.Zero);
+((Time) 0).Should().Be(Time.Zero);
+((Time) "0").Should().Be(Time.Zero);
+((Time) 0).Should().Be((Time) "0");
+----
+
+Special Time values `0` and `-1` can be compared against other Time values
+although admittedly, this is a tad nonsensical.
+
+[source,csharp]
+----
+var twoDays = new Time(2, Nest.TimeUnit.Day);
+Time.MinusOne.Should().BeLessThan(Time.Zero);
+Time.Zero.Should().BeGreaterThan(Time.MinusOne);
+Time.Zero.Should().BeLessThan(twoDays);
+Time.MinusOne.Should().BeLessThan(twoDays);
+----
+
+If there is a need to construct a time of -1ms or 0ms, use the constructor
+that accepts a factor and time unit, or specify a string with ms time units
+
+[source,csharp]
+----
+(new Time(-1, Nest.TimeUnit.Millisecond) == new Time("-1ms")).Should().BeTrue();
+(new Time(0, Nest.TimeUnit.Millisecond) == new Time("0ms")).Should().BeTrue();
 ----
 
 ==== Units of Time
 
-Units of `Time` are specified as a union of either a `DateInterval` or `Time`,
-both of which implicitly convert to the `Union` of these two.
+Where Units of Time can be specified as a union of either a `DateInterval` or `Time`,
+a `DateInterval` or `Time` may be passed which will be implicity converted to a`Union<DateInterval, Time>`, the serialized form of which represents the initial value
+passed
 
 [source,csharp]
 ----
@@ -156,6 +195,6 @@ Expect("week").WhenSerializing<Union<DateInterval, Time>>(DateInterval.Week);
 Expect("year").WhenSerializing<Union<DateInterval, Time>>(DateInterval.Year);
 
 Expect("2d").WhenSerializing<Union<DateInterval, Time>>((Time)"2d");
-Expect("1.16w").WhenSerializing<Union<DateInterval, Time>>((Time)TimeSpan.FromDays(8.1));
+Expect("11664m").WhenSerializing<Union<DateInterval, Time>>((Time)TimeSpan.FromDays(8.1));
 ----
 
